# simple-ollama-environment

./: .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: dockerhub.yml  ghcr.yml
notebooks/: ollama_quickstart.ipynb
notebooks/.ipynb_checkpoints/: ollama_quickstart-checkpoint.ipynb
